--- a/example/containment-example/CMakeLists.txt
+++ b/example/containment-example/CMakeLists.txt
@@ -2,8 +2,4 @@
 #
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-ds_build_package(PACKAGE org.deepin.ds.containment-example
-SOURCES
-    ${CMAKE_CURRENT_SOURCE_DIR}/metadata.json
-    ${CMAKE_CURRENT_SOURCE_DIR}/main.qml
-)
+ds_build_package(PACKAGE org.deepin.ds.containment-example)
