--- a/frame/CMakeLists.txt
+++ b/frame/CMakeLists.txt
@@ -4,6 +4,8 @@
 
 
 add_library(dde-shell-frame SHARED
+    dstypes.h
+    dstypes.cpp
     pluginmetadata.h
     pluginmetadata.cpp
     pluginloader.h
@@ -24,7 +26,6 @@ add_library(dde-shell-frame SHARED
     quick/panelview.cpp
     quick/qmlengine.h
     quick/qmlengine.cpp
-
 )
 
 set_target_properties(dde-shell-frame PROPERTIES OUTPUT_NAME dde-shell)
@@ -46,4 +47,27 @@ target_link_directories(dde-shell-frame INTERFACE
 
 target_compile_definitions(dde-shell-frame INTERFACE
     DDE_SHELL_PACKAGE_PATH_SUBPATH="dde-shell"
+)
+
+set(URI "org.deepin.ds")
+add_library(dde-shell-plugin SHARED
+    quick/qmlplugin.h
+    quick/qmlplugin.cpp
+    quick/qmldir
+)
+
+target_link_libraries(dde-shell-plugin
+PUBLIC
+    dde-shell-frame
+)
+
+string(REPLACE "." "/" URI_PATH ${URI})
+set_target_properties(dde-shell-plugin PROPERTIES
+    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/plugins/${URI_PATH}"
+    OUTPUT_NAME dde-shell-plugin
+)
+set(QML_IMPORT_PATH "${PROJECT_BINARY_DIR}/plugins/${URI_PATH}" CACHE STRING "Qt Creator extra qml import paths")
+add_custom_command(TARGET dde-shell-plugin
+POST_BUILD
+   COMMAND ${CMAKE_COMMAND} -E  copy_if_different "${CMAKE_CURRENT_SOURCE_DIR}/quick/qmldir" "${PROJECT_BINARY_DIR}/plugins/${URI_PATH}"    #out-file
 )
