--- a/frame/CMakeLists.txt
+++ b/frame/CMakeLists.txt
@@ -2,33 +2,39 @@
 #
 # SPDX-License-Identifier: CC0-1.0
 
-
-add_library(dde-shell-frame SHARED
+set(PUBLIC_HEADERS
+    dsglobal.h
     dstypes.h
-    dstypes.cpp
     pluginmetadata.h
-    pluginmetadata.cpp
     pluginloader.h
-    pluginloader.cpp
     pluginfactory.h
-    pluginfactory.cpp
     applet.h
-    applet.cpp
     containment.h
-    containment.cpp
     corona.h
-    corona.cpp
     quick/appletitem.h
-    quick/appletitem.cpp
     quick/containmentitem.h
-    quick/containmentitem.cpp
     quick/panelview.h
-    quick/panelview.cpp
     quick/qmlengine.h
+)
+add_library(dde-shell-frame SHARED
+    ${PUBLIC_HEADERS}
+    dstypes.cpp
+    pluginmetadata.cpp
+    pluginloader.cpp
+    pluginfactory.cpp
+    applet.cpp
+    containment.cpp
+    corona.cpp
+    quick/appletitem.cpp
+    quick/containmentitem.cpp
+    quick/panelview.cpp
     quick/qmlengine.cpp
 )
 
-set_target_properties(dde-shell-frame PROPERTIES OUTPUT_NAME dde-shell)
+set_target_properties(dde-shell-frame PROPERTIES
+    OUTPUT_NAME dde-shell
+    EXPORT_NAME DDEShell
+)
 target_link_libraries(dde-shell-frame
 PUBLIC
     Qt5::Core
@@ -36,17 +42,21 @@ PUBLIC
     Qt5::Quick
 )
 target_include_directories(dde-shell-frame INTERFACE
-    ${CMAKE_SOURCE_DIR}
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/quick>
+    $<INSTALL_INTERFACE:${INCLUDE_INSTALL_DIR}>
 )
 target_link_directories(dde-shell-frame INTERFACE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
     $<INSTALL_INTERFACE:${LIB_INSTALL_DIR}>
 )
 
-target_compile_definitions(dde-shell-frame INTERFACE
+target_compile_definitions(dde-shell-frame
+INTERFACE
     DDE_SHELL_PACKAGE_PATH_SUBPATH="dde-shell"
+PRIVATE
+    DDE_SHELL_QML_INSTALL_DIR="${CMAKE_INSTALL_PREFIX}/${QML_INSTALL_DIR}"
 )
 
 set(URI "org.deepin.ds")
@@ -71,3 +81,10 @@ add_custom_command(TARGET dde-shell-plugin
 POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E  copy_if_different "${CMAKE_CURRENT_SOURCE_DIR}/quick/qmldir" "${PROJECT_BINARY_DIR}/plugins/${URI_PATH}"    #out-file
 )
+
+install(FILES ${PUBLIC_HEADERS} DESTINATION "${INCLUDE_INSTALL_DIR}")
+install(TARGETS dde-shell-frame EXPORT DDEShellTargets DESTINATION "${LIB_INSTALL_DIR}")
+install(EXPORT DDEShellTargets FILE DDEShellTargets.cmake DESTINATION "${CONFIG_INSTALL_DIR}")
+
+install(TARGETS dde-shell-plugin EXPORT DDEShellTargets DESTINATION "${QML_INSTALL_DIR}/${URI_PATH}")
+install(FILES quick/qmldir DESTINATION "${QML_INSTALL_DIR}/${URI_PATH}/")
