--- a/example/corona-example/CMakeLists.txt
+++ b/example/corona-example/CMakeLists.txt
@@ -13,4 +13,4 @@ target_link_libraries(ds-corona-example PRIVATE
     dde-shell-frame
 )
 
-ds_build_package(PACKAGE org.deepin.ds.corona-example TARGET ds-corona-example)
+ds_install_package(PACKAGE org.deepin.ds.corona-example TARGET ds-corona-example)
