--- a/frame/CMakeLists.txt
+++ b/frame/CMakeLists.txt
@@ -32,6 +32,8 @@ add_library(dde-shell-frame SHARED
 )
 
 set_target_properties(dde-shell-frame PROPERTIES
+    VERSION ${CMAKE_PROJECT_VERSION}
+    SOVERSION ${CMAKE_PROJECT_VERSION_MAJOR}
     OUTPUT_NAME dde-shell
     EXPORT_NAME DDEShell
 )
@@ -57,6 +59,7 @@ INTERFACE
     DDE_SHELL_PACKAGE_PATH_SUBPATH="dde-shell"
 PRIVATE
     DDE_SHELL_QML_INSTALL_DIR="${CMAKE_INSTALL_PREFIX}/${QML_INSTALL_DIR}"
+    DDE_SHELL_PLUGIN_INSTALL_DIR="${CMAKE_INSTALL_PREFIX}/${DDE_SHELL_PLUGIN_INSTALL_DIR}"
 )
 
 set(URI "org.deepin.ds")
