--- a/shell/CMakeLists.txt
+++ b/shell/CMakeLists.txt
@@ -2,17 +2,14 @@
 #
 # SPDX-License-Identifier: CC0-1.0
 
-find_package(Qt5 ${REQUIRED_QT_VERSION} REQUIRED COMPONENTS Core Gui Widgets)
-find_package(Dtk${DTK_VERSION_MAJOR} REQUIRED COMPONENTS Core Gui)
-
 add_executable(dde-shell
     main.cpp
 )
 
 target_link_libraries(dde-shell PRIVATE
     dde-shell-frame
-    Qt5::Widgets
-    Dtk::Gui
+    Qt${QT_VERSION_MAJOR}::Gui
+    Dtk${DTK_VERSION_MAJOR}::Gui
 )
 
 install(TARGETS dde-shell DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
