--- a/misc/DDEShellConfig.cmake.in
+++ b/misc/DDEShellConfig.cmake.in
@@ -5,7 +5,7 @@ find_dependency(Dtk@DTK_VERSION_MAJOR@Gui)
 find_package(Qt@QT_VERSION_MAJOR@ COMPONENTS Qml Quick REQUIRED)
 
 include(${CMAKE_CURRENT_LIST_DIR}/DDEShellTargets.cmake)
-set(DDE_SHELL_PACKAGE_INSTALL_DIR @DDE_SHELL_PACKAGE_INSTALL_DIR@)
+set(DDE_SHELL_PACKAGE_INSTALL_DIR @CMAKE_INSTALL_PREFIX@/@DDE_SHELL_PACKAGE_INSTALL_DIR@)
 set(DDE_SHELL_PLUGIN_INSTALL_DIR @CMAKE_INSTALL_PREFIX@/@DDE_SHELL_PLUGIN_INSTALL_DIR@)
 get_target_property(DDEShell_INCLUDE_DIRS DDEShell INTERFACE_INCLUDE_DIRECTORIES)
 get_target_property(DDEShell_LIBRARY_DIRS DDEShell INTERFACE_LINK_DIRECTORIES)
