--- a/coronas/osd/CMakeLists.txt
+++ b/coronas/osd/CMakeLists.txt
@@ -14,6 +14,7 @@ add_library(osdcorona SHARED
 
 target_link_libraries(osdcorona PRIVATE
     dde-shell-frame
+    Qt${QT_MAJOR_VERSION}::DBus
 )
 
 ds_install_package(PACKAGE org.deepin.ds.osd TARGET osdcorona)
