--- a/coronas/CMakeLists.txt
+++ b/coronas/CMakeLists.txt
@@ -2,4 +2,6 @@
 #
 # SPDX-License-Identifier: GPL-3.0-or-later
 
+find_package(Qt${QT_MAJOR_VERSION} ${REQUIRED_QT_VERSION} REQUIRED COMPONENTS DBus)
+
 add_subdirectory(osd)
