--- a/coronas/osd/CMakeLists.txt
+++ b/coronas/osd/CMakeLists.txt
@@ -19,6 +19,8 @@ target_link_libraries(osdcorona PRIVATE
 
 ds_install_package(PACKAGE org.deepin.ds.osd TARGET osdcorona)
 
-#add_subdirectory(default)
-#add_subdirectory(audio)
+add_subdirectory(default)
+add_subdirectory(audio)
 add_subdirectory(displaymode)
+add_subdirectory(kblayout)
+add_subdirectory(brightness)
